--- a/hyprland.conf
+++ b/hyprland.conf
@@ -18,6 +18,7 @@ monitor = DP-1, 1600x900@60, 0x0, 1
 $terminal = alacritty
 $fileManager = thunar
 $menu = rofi -show drun -show-icons
+$emojiMenu = rofi -modi emoji -show emoji
 $webbrowser = firefox
 
 #################
@@ -32,8 +33,7 @@ $webbrowser = firefox
 
 exec-once = ~/.config/waybar/launch.sh
 exec-once = hyprpaper
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = clipse -listen
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -41,9 +41,14 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME=qt6ct
 
 #####################
 ### LOOK AND FEEL ###
@@ -202,8 +207,9 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, T, togglefloating,
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, D, exec, $emojiMenu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, P, exec, ~/.config/waybar/launch.sh
@@ -279,6 +285,12 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
+
+windowrule = float, class:(clipse)
+windowrule = size 622 652, class:(clipse)
+windowrule = stayfocused, class:(clipse)
+
+bind = SUPER, V, exec, alacritty --class clipse -e clipse
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
